--- a/style.css
+++ b/style.css
@@ -160,3 +160,21 @@ gap: 1.5vmin;
         padding: 0.6rem;
     }
 }
+@media (max-width:325px) {
+    .container{
+        height: 40vh;
+    }
+    #game{
+        height: 75vmin;
+        width: 75vmin;
+    }
+    .cell{
+        height: 10vmin;
+        width: 10vmin;
+    }
+
+    .btn{
+        font-size: 0.7rem;
+        padding: 0.6rem;
+    }
+}
