--- a/style.css
+++ b/style.css
@@ -141,6 +141,9 @@ gap: 1.5vmin;
         height: 69vmin;
         width: 70vmin;
     }
+      #message{
+        background-color: #57cc99;
+    }
     .cell{
         height: 9vmin;
         width: 9vmin;
